# scenarioanalysis2

./: .gitignore  .gitmodules  ARCHITECTURE_REVIEW.md  CMakeLists.txt  PROJECT_MILESTONES.md  README.md  tidyup.md
dashboard/: README.md  index.html  package.json  test.html  vite.config.ts
dashboard/public/: example_template.json
dashboard/server/: api.js  index.js  package.json
dashboard/src/: App.test.tsx  App.tsx  index.css  polyfills.ts
data/examples/: scenario_drivers_example.json
data/migrations/: 001_initial_schema.sql  002_m4_pl_engine.sql  003_m7_fx_rates.sql  004_validation_rules.sql
data/templates/: corporate_bs.json  corporate_cf.json  corporate_pl.json  insurance_pl.json  test_unified_l10_carbon_financial.json  test_unified_l9_carbon.json
doc/: NATIVE_VISUALIZATION_ARCHITECTURE.md
docs/: FOLDER_STRUCTURE_CLEANUP.md  GUI_LEVEL1_FLOW.md  IMPLEMENTATION_PLAN.md  LEVEL14_MULTIPLE_ACTIONS.md  M1_DETAILED_WORKPLAN.md  M8_PROGRESS.md  PHASE_A_PROGRESS_ANALYSIS.md  STORAGE_ARCHITECTURE.md  TARGET_STATE.md  TECH_DOC.md  entity-hierarchy-rollup.md
docs/docu/: STORY.md  (+25 more)
engine/: CMakeLists.txt
engine/include/actions/: action_engine.h
engine/include/archive/legacy_engines/: README.md  bs_engine.h  cf_engine.h  pl_engine.h
engine/include/bs/: bs_engine.h
engine/include/bs/providers/: bs_value_provider.h  statement_value_provider.h
engine/include/carbon/: mac_curve_engine.h
engine/include/cf/: cf_engine.h
engine/include/cf/providers/: cf_value_provider.h
engine/include/core/: context.h  dependency_graph.h  formula_evaluator.h  ivalue_provider.h  statement_template.h  unit_converter.h
engine/include/core/providers/: fx_value_provider.h
engine/include/database/: connection.h  database_factory.h  idatabase.h  result_set.h  sqlite_database.h
engine/include/fx/: fx_provider.h
engine/include/orchestration/: period_runner.h  period_setup.h  scenario_generator.h
engine/include/physical_risk/: damage_function.h  damage_function_registry.h  geo_utils.h  physical_risk_engine.h
engine/include/pl/: pl_engine.h  tax_engine.h  tax_strategy.h
engine/include/pl/providers/: driver_value_provider.h  pl_value_provider.h  tax_value_provider.h
engine/include/pl/tax_strategies/: flat_rate_strategy.h  minimum_tax_strategy.h  progressive_strategy.h
engine/include/types/: common_types.h
engine/include/unified/: unified_engine.h  validation_rule_engine.h
engine/include/unified/providers/: driver_value_provider.h
engine/src/: main.cpp
engine/src/actions/: action_engine.cpp
engine/src/archive/legacy_engines/: bs_engine.cpp  cf_engine.cpp  pl_engine.cpp
engine/src/bs/: bs_engine.cpp
engine/src/bs/providers/: bs_value_provider.cpp  statement_value_provider.cpp
engine/src/carbon/: mac_curve_engine.cpp
engine/src/cf/: cf_engine.cpp
engine/src/cf/providers/: cf_value_provider.cpp
engine/src/core/: dependency_graph.cpp  formula_evaluator.cpp  statement_template.cpp  unit_converter.cpp
engine/src/core/providers/: fx_value_provider.cpp
engine/src/database/: connection.cpp  database_factory.cpp  sqlite_database.cpp
engine/src/fx/: fx_provider.cpp
engine/src/orchestration/: period_runner.cpp  period_setup.cpp  scenario_generator.cpp
engine/src/physical_risk/: damage_function.cpp  damage_function_registry.cpp  geo_utils.cpp  physical_risk_engine.cpp
engine/src/pl/: pl_engine.cpp  tax_engine.cpp
engine/src/pl/providers/: driver_value_provider.cpp  pl_value_provider.cpp  tax_value_provider.cpp
engine/src/pl/tax_strategies/: flat_rate_strategy.cpp  minimum_tax_strategy.cpp  progressive_strategy.cpp
engine/src/unified/: unified_engine.cpp  validation_rule_engine.cpp
engine/src/unified/providers/: driver_value_provider.cpp
engine/tests/: CMakeLists.txt  test_bs_engine.cpp  test_carbon.cpp  test_cf_engine.cpp  test_database.cpp  test_dependency_graph.cpp  test_formula_evaluator.cpp  test_fx_provider.cpp  test_integration.cpp  test_level1.cpp  test_level10_carbon_financial.cpp  test_level11_unit_conversion.cpp  test_level12_fx_conversion.cpp  test_level13_single_action.cpp  test_level14_multiple_actions.cpp  test_level15_conditional_triggers.cpp  test_level16_transformation_types.cpp  test_level17_mac_from_scenarios.cpp  test_level18_physical_risk_basics.cpp  test_level19_physical_risk_integration.cpp  test_level2.cpp  test_level3.cpp  test_level4_unified.cpp  test_level5.cpp  test_level6.cpp  test_level7.cpp  test_level8.cpp  test_level9_carbon_basics.cpp  test_mac_curves.cpp  test_period_runner.cpp  test_pl_engine.cpp  test_scenario_generator.cpp  test_statement_template.cpp  test_tax_strategies.cpp  test_unit_converter.cpp
engine/tests/archive/legacy_tests/: test_bs_engine.cpp  test_level1_systematic.cpp  test_level2_systematic.cpp  test_level3_systematic.cpp  test_pl_engine.cpp
scripts/: DartConfiguration.tcl  cleanup_test_outputs.sh  deploy_lightsail.sh  generate_improved_hazard_maps.py  init_database.cpp  insert_carbon_template.sh  insert_level10_template.sh  insert_level10_validation_rules.sh  insert_level1_templates.sh  insert_level1_unified_template.sh  insert_level1_validation_rules.sh  insert_level2_templates.sh  insert_level2_unified_template.sh  insert_level2_validation_rules.sh  insert_level3_templates.sh  insert_level3_validation_rules.sh  insert_level4_template.sh  insert_level4_validation_rules.sh  insert_level5_test_templates.sh  insert_level5_validation_rules.sh  insert_level6_test_templates.sh  insert_level6_validation_rules.sh  insert_level7_test_templates.sh  insert_level7_validation_rules.sh  insert_level8_test_templates.sh  insert_level8_validation_rules.sh  insert_level9_template.sh  insert_level9_validation_rules.sh  insert_physical_risk_samples.sh  insert_sample_actions.sh  insert_templates.cpp  insert_validation_rules.sh  migrate_add_action_details.sh  migrate_add_action_triggers.sh  migrate_add_carbon_statement.sh  migrate_add_company_to_mapping.sh  migrate_add_file_id_to_staging.sh  migrate_add_hazard_map_file_type.sh  migrate_add_location_damage_curve_types.sh  migrate_add_location_damage_curves.sh  (+11 more)
(+73 files in other folders)
